Crates/Tui/src/tests/snapshots/skillmirror_tui__tests__agents__the_question_as_snapshot.snap
---
source: Crates/Tui/src/tests/agents.rs
expression: ui.screen()
---
 ← skillmirror  ·  javedab.com  ·  agents

 Select projects to write the AGENTS.md block into   1 / 3 selected
 / to filter
      project             state
> [ ] projects/one        current   up to date
  [ ] projects/three      missing   no AGENTS.md yet
  [✓] projects/two ╭ Write AGENTS.md in 1 project? ─────────────────────────────╮
                   │                                                            │
                   │ Rewrites the block in 1 AGENTS.md file.                    │
                   │ Only the text between the autogenerated markers is         │
                   │ written; the rest stays.                                   │
                   │                                                            │
                   │              [ y  Write ]        [ n  Cancel ]             │
                   ╰────────────────────────────────────────────────────────────╯



 rows 1–3 of 3
 y/enter confirm • n/esc cancel • v view changes • ctrl+c quit
